FirstGitProj/src/objects/Price_Area__c.object
<CustomObject>
    <fields>
        <fullName>Price_Area_Territory__c</fullName>
        <formula>LEFT(Name,3) &amp;&quot;_&quot;&amp;  Territory__r.BPCS_Code__c</formula>
        <label>Price Area _Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Area__c</fullName>
        <externalId>true</externalId>
        <label>Price Area#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Price Areas</relationshipLabel>
        <relationshipName>Price_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Price Area</label>
    <listViews>
        <fullName>All_Price_Areas</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Price_Area_Territory__c</columns>
        <columns>Price_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Areas</label>
    </listViews>
    <listViews>
        <fullName>Price_Sheets</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>price</value>
        </filters>
        <label>Price Sheet</label>
    </listViews>
    <nameField>
        <label>Price Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>